--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "HOME/.vim/bundle-available/nerdtree"]
 	path = HOME/.vim/bundle-available/nerdtree
 	url = https://github.com/scrooloose/nerdtree.git
+[submodule "HOME/.vim/bundle-available/vcscommand"]
+	path = HOME/.vim/bundle-available/vcscommand
+	url = git://repo.or.cz/vcscommand.git
