--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "HOME/.vim/bundle-available/fugitive"]
 	path = HOME/.vim/bundle-available/fugitive
 	url = https://github.com/tpope/vim-fugitive.git
+[submodule "HOME/.vim/bundle-available/solarized"]
+	path = HOME/.vim/bundle-available/solarized
+	url = https://github.com/altercation/vim-colors-solarized.git
