--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "HOME/.vim/bundle-available/solarized"]
 	path = HOME/.vim/bundle-available/solarized
 	url = https://github.com/altercation/vim-colors-solarized.git
+[submodule "HOME/.vim/bundle-available/vim-ipython"]
+	path = HOME/.vim/bundle-available/vim-ipython
+	url = https://github.com/ivanov/vim-ipython
